--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,10 +5,10 @@
   <parent>
     <groupId>pentaho</groupId>
     <artifactId>cda-plugin</artifactId>
-    <version>9.0.0.0-SNAPSHOT</version>
+    <version>9.0.0.0-150</version>
   </parent>
   <artifactId>cda-core</artifactId>
-  <version>9.0.0.0-SNAPSHOT</version>
+  <version>9.0.0.0-150</version>
   <licenses>
     <license>
       <name>Mozilla Public License, Version 2.0</name>
